--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -41,6 +41,10 @@ header {
       width: 40px;
       height: 40px;
       background: linear-gradient(to bottom right, transparent 0%, transparent 50%, $white 50%, $white 100%);
+
+      @include desktop {
+        background: unset;
+      }
     }
 
     @include desktop {
